feat(auth-test): add supabase admin auth and integration workflow tests

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ DATABASE_URL="postgresql://postgres.[PROJECT_REF]:[PASSWORD]@[REGION].pooler.sup
 
 # Used by Prisma migrations (direct DB URL recommended)
 DIRECT_URL="postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres"
+
+# Supabase Auth (used to verify Bearer tokens for admin endpoints)
+SUPABASE_URL="https://[PROJECT_REF].supabase.co"
+SUPABASE_ANON_KEY="[SUPABASE_ANON_KEY]"
+
+# Optional: seed admin mapping to an existing Supabase Auth user UUID
+ADMIN_AUTH_USER_ID="11111111-1111-1111-1111-111111111111"
