feat(phase4): polish admin workflow, add api observability, and close docs

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY="[SUPABASE_PUBLISHABLE_OR_ANON_KEY]"
 
 # Optional: seed admin mapping to an existing Supabase Auth user UUID
 ADMIN_AUTH_USER_ID="11111111-1111-1111-1111-111111111111"
+
+# Optional: used in README admin bootstrap examples
+ADMIN_EMAIL="admin@yourdomain.com"
