feat(admin-catalog): add catalog CRUD, R2 uploads, and validation UX

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,12 @@ ADMIN_AUTH_USER_ID="11111111-1111-1111-1111-111111111111"
 
 # Optional: used in README admin bootstrap examples
 ADMIN_EMAIL="admin@yourdomain.com"
+
+# Cloudflare R2 (product image upload)
+R2_ACCOUNT_ID="[CLOUDFLARE_ACCOUNT_ID]"
+R2_ACCESS_KEY_ID="[R2_ACCESS_KEY_ID]"
+R2_SECRET_ACCESS_KEY="[R2_SECRET_ACCESS_KEY]"
+R2_BUCKET="[R2_BUCKET_NAME]"
+# Public base URL for your bucket/custom domain. Example:
+# https://pub-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.r2.dev
+R2_PUBLIC_BASE_URL="https://[YOUR_PUBLIC_R2_BASE_URL]"
