fix(ci): provide placeholder env vars for prisma and build checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,16 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    env:
+      DATABASE_URL: postgresql://postgres:postgres@127.0.0.1:5432/postgres
+      DIRECT_URL: postgresql://postgres:postgres@127.0.0.1:5432/postgres
+      NEXT_PUBLIC_SUPABASE_URL: https://example.supabase.co
+      NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY: example-publishable-key
+      R2_ACCOUNT_ID: example-account
+      R2_ACCESS_KEY_ID: example-access-key
+      R2_SECRET_ACCESS_KEY: example-secret
+      R2_BUCKET: example-bucket
+      R2_PUBLIC_BASE_URL: https://pub-example.r2.dev
 
     steps:
       - name: Checkout
