--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^7.4.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
+    "gsap": "^3.14.2",
     "next": "16.1.6",
     "pg": "^8.16.3",
     "prisma": "^7.4.0",
