chore(stability): add preflight gate, typecheck CI step, and launch checks

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "pnpm prisma:generate && next build",
     "start": "next start",
     "lint": "eslint",
+    "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
+    "check:preflight": "pnpm prisma:generate && pnpm lint && pnpm typecheck && pnpm test && pnpm build",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "prisma db seed",
